--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: ruby
 rvm:
-  - 2.1.1
-  - 2.1.0
-  - 2.0.0
+  - 2.1
+  - 2.0
   - 1.9.3
   - 1.9.2
+  - jruby-19mode
+  - rbx-2
+  - ruby-head
+  - jruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+    - rvm: jruby-head
 script: bundle exec rake spec
