--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ before_install:
   - gem install bundler
 language: ruby
 rvm:
-  - 2.3.1
+  - 2.4
+  - 2.3
   - 2.2
-  - 2.1
-  - 2.0
   - jruby-19mode
   - rbx-2
   - ruby-head
@@ -15,4 +14,5 @@ matrix:
   allow_failures:
     - rvm: ruby-head
     - rvm: jruby-head
+    - rvm: rbx-2
 script: bundle exec rake spec
