--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,12 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         ruby:
-          - 3.0.6
-          - 3.1.4
-          - 3.2.2
-          - 3.3.0
+          - 3.1.6
+          - 3.2.4
+          - 3.3.4
 
     steps:
     - uses: actions/checkout@v4
